Init commit Nov. 16, 2020

--- a/index.html
+++ b/index.html
@@ -10,8 +10,21 @@
     <div class="container">
         <h1>Discover hidden places in the world around you</h1>
         <p><a href="#">Download Excursion (Coming soon)</a></p>
-        <img src="" alt="">
+        <video autoplay>
+            <source src="resources/images/excursion.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        <h1>Your personal travel guide</h1>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="resources/images/camp.webp" alt="camp tent">
+        <img src="resources/images/phone.webp" alt="phone webp">
+        <h1>Coming Soon for iPhone and AndroidS</h1>
+        <p><a href="#">Download Excursion (Coming soon)</a></p>
+
     </div>
+    <footer>
+        <p>@ Excursion</p>
+    </footer>
     
 </body>
 </html>
