--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="container">
         <h1>Discover hidden places in the world around you</h1>
         <p><a href="#">Download Excursion (Coming soon)</a></p>
-        <video autoplay>
-            <source src="resources/images/excursion.mp4" type="video/mp4">
+        <video autoplay loop muted>
+            <source src="resources/videos/excursion.mp4" type="video/mp4">
             Your browser does not support the video tag.
-          </video>
+        </video>
         <h1>Your personal travel guide</h1>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
         <img src="resources/images/camp.webp" alt="camp tent">
